--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.6",
     "dompurify": "^3.2.6",
+    "firebase": "^12.4.0",
+    "mapbox-gl": "^3.6.0",
+    "papaparse": "^5.4.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "zod": "^4.1.5"
+  },
+  "optionalDependencies": {
+    "jspdf": "^2.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
