connect to fire base

--- a/.env
+++ b/.env
@@ -6,6 +6,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=700178197313
 VITE_FIREBASE_APP_ID=1:700178197313:web:88e663646d9f9ad3070fc0
 VITE_MAPBOX_TOKEN=
 VITE_SENDGRID_FROM_EMAIL=
-VITE_ADMIN_EMAILS=
+VITE_ADMIN_EMAILS=percynetwork@gmail.com
 VITE_COACH_EMAILS=
-Ac2 Yang Hu
