--- a/Functions/package.json
+++ b/Functions/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "nodemailer": "^6.9.8",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.0.1"
   }
